Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14645

Parser crashing in a long initializer list

XMLWordPrintable

    • 9d5c85a6359769d4ad37ea2f1fded65d03824b25

      Qt-Creator crashes while opening (and parsing) a cpp file containing a very long initializer list for a local variable. In my case (see attachment) it's just an array initializer; the original code there it was first found seems to be an auto generated file. Under debugger I can see a lot of lines in a stack trace like this:

      frame #10809: 0x00000001123c7c5c libCPlusPlus_debug.1.0.0.dylib`CPlusPlus::BinaryExpressionAST::clone(this=0x00000001394fe798, pool=0x0000000134fc5920) const + 92 at ASTClone.cpp:350

      P.S. Qt-Creator does not crash if such an initializer is in a non-function scope.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes